force-app/main/default/objects/BatalhaContato__c/BatalhaContato__c.object-meta.xml
<CustomObject>
    <description>Objeto de junção entre contato e batalha do contato</description>
    <label>Batalha do contato</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Batalha do contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batalhas do contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>