force-app/main/default/objects/BatalhaContato__c/fields/Batalha__c.field-meta.xml
<CustomField>
    <fullName>Batalha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento com o objeto batalha</description>
    <label>Batalha</label>
    <referenceTo>Batalha__c</referenceTo>
    <relationshipLabel>Batalhas do contato</relationshipLabel>
    <relationshipName>Batalhas_do_contato</relationshipName>
    <type>Lookup</type>
</CustomField>