force-app/main/default/objects/BatalhaContato__c/fields/Batalhas_do_contato__c.field-meta.xml
<CustomField>
    <fullName>Batalhas_do_contato__c</fullName>
    <displayFormat>BCC-{00000}</displayFormat>
    <label>Batalhas do contato</label>
    <type>AutoNumber</type>
</CustomField>