force-app/main/default/objects/BatalhaContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <description>Contato para a batalha</description>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batalhas do contato</relationshipLabel>
    <relationshipName>BatalhasContato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>