force-app/main/default/objects/BatalhaContato__c/fields/PapelBatalha__c.field-meta.xml
<CustomField>
    <fullName>PapelBatalha__c</fullName>
    <description>Verifica o tipo de registro e insere qual e função do contato na batalha. Se caso heroi, irá salvar o mundo, se caso vilão, orá atacar o mundo</description>
    <formula>if(Contato__r.RecordType.DeveloperName = &apos;Heroi&apos;, &apos;Salvar o mundo&apos;, &apos;atacar o mundo&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel na batalha</label>
    <type>Text</type>
</CustomField>